<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@mipmap/profile"
                app:civ_border_color="@color/blue"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="ID:00001"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="昵称:陈泡泡_"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:text="@string/dark_mode"
                    android:gravity="center_vertical"/>
                <Switch
                    android:id="@+id/switch_dark_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:thumb="@drawable/selector_switch_thumb"
                    android:track="@drawable/selector_switch_track"/>
            </FrameLayout>

            <include layout="@layout/view_divider" />

            <FrameLayout
                android:id="@+id/fl_update_info"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:text="@string/edit_info"
                    android:gravity="center_vertical"/>
            </FrameLayout>

            <include layout="@layout/view_divider" />

            <FrameLayout
                android:id="@+id/fl_about"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:text="@string/abort_software"
                    android:gravity="center_vertical"/>
            </FrameLayout>

            <include layout="@layout/view_divider" />

            <FrameLayout
                android:id="@+id/fl_faq"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:text="@string/common_problem"
                    android:gravity="center_vertical"/>
            </FrameLayout>

            <include layout="@layout/view_divider" />

            <FrameLayout
                android:id="@+id/fl_update_version"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:text="@string/update_version"
                    android:gravity="center_vertical"/>
                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"/>
            </FrameLayout>

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="#ff4e50"
                android:text="@string/exit_app" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>